# leyval

./: .dir-locals.el  .gitignore  CMakeLists.txt  CMakePresets.json  README.org  default.nix  main.cpp
scripts/: README.org  plot.py  pyproject.toml  shell.nix
src/: agent.cpp  agent.hpp  constants.hpp  exchange.cpp  exchange.hpp  fixed_point.hpp  main.cpp  matching_system.cpp  matching_system.hpp  money.cpp  money.hpp  my_spdlog.hpp  order.cpp  order.hpp  order_book.cpp  order_book.hpp  overloaded.hpp  serializable.hpp
src/util/: timer.hpp  truncated_distribution.hpp
test/: test_agent.cpp  test_fixed_point.cpp  test_money.cpp  test_order_book.cpp  test_timer.cpp
